--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <style>
-        *{
+        /* *{
             margin: 0;
             padding: 0;
             box-sizing: border-box;
@@ -24,30 +24,52 @@
         a{
             text-decoration: none;
             font-family: 'Poppins', sans-serif;
+        } */
+        *{
+            font-family: 'Poppins', sans-serif;
         }
     </style>
 </head>
 <body>
-    <div class="id" style=" width: 500px; height: 250px; background-color: rgb(241, 235, 235) ; padding: 30px;">
-        <div class="id__img" style="width: 100%; height: 30%;  display:block; border-bottom: 3px solid rgba(136, 136, 136, 0.906);  padding-top: 5px;">
-            <a style="font-weight: 300;  display: block;line-height: 0.8;font-size: 10px; color: #555; margin-bottom: 5px;">kind regards</a>
-            <a style="font-size: 22px; display: block; line-height: 0.8; font-weight: 600; color: #333; margin-bottom: 5px;">Mahmudul Islam</a>
-            <a style="text-transform: uppercase;  display: block; line-height: 0.8; font-weight: 600; font-size: 11px; letter-spacing: 2px; word-spacing: 2px; color: #8ed400;">web designer</a>
+    <div class="id" style=" width: 500px; height: 250px;  background: rgb(37,159,200);
+        background: linear-gradient(24deg, rgba(37,159,200,0.24813252937893904) 0%, rgba(34,85,216,0.24533140893075978) 0%, rgba(197,224,224,0.4554154425442052) 100%, rgba(203,192,219,0.4694210447851015) 100%); border-radius: 25px; padding: 30px;">
+        <div class="id__img" style="width: 100%; height: 28%;  display:block; border-bottom: 3px solid #937cffba;  padding-top: 5px;">
+            <a style="font-weight: 300;  display: block;line-height: 0.8;font-size: 13px; color: #555; margin-bottom: 8px;">kind regards</a>
+            <a style="font-size: 24px; display: block; line-height: 0.8; font-weight: 600; color: #333; margin-bottom: 6px;">Mahmudul Islam</a>
+            <a style="text-transform: uppercase;  display: block; line-height: 0.8; font-weight: 800; font-size: 14px; letter-spacing: 2px; word-spacing: 2px; color: rgba(0, 67, 212, 0.703);">web designer</a>
         </div>
-        <div class="id__info" style="width: 100%; height: 70%; display:block; display: flex; padding-top: 10px;">
-            <div style="width: 100px; height: 100px; border-radius: 50%; overflow: hidden; margin: 0 ; margin-right: 20px;">
+        <div class="id__info" style="width: 100%; height: 70%; display:block; display: flex; padding-top: 15px;">
+            <div style="width: 120px; height: 120px; border-radius: 50%; overflow: hidden; margin: 0 ; margin-right: 20px;">
                 <img src="https://i.postimg.cc/KYm1Ltgd/pexels-pixabay-220453.jpg" alt="not found" style="width: 100%; height: 100%; object-fit: cover;">
             </div>
             <div style="width: 320px; height: 123px; ">
-                <ul style="border-bottom: 2px solid #888;">
-                    <li style="font-size: 12px ; margin-bottom: 3px; font-weight: 600; color: #8ed400;">Mobile: <span><a style="font-size: 12px ; font-weight: 400; color: #333;" href="tel:+01996153133">+8801996153133</a></span></li>
-                    <li style="font-size: 12px ; margin-bottom: 3px; font-weight: 600; color: #8ed400;">Office: <span><a style="font-size: 12px ; font-weight: 400; color: #333;" href="tel:+01996153133">+8801996153133</a></span></li>
-                    <li style="font-size: 12px ; margin-bottom: 3px; font-weight: 600; color: #8ed400;">Address: <span><a style="font-size: 12px ; font-weight: 400; color: #333;" href="#">Bangladesh , Dhaka</a></span></li>
-                    <li style="font-size: 12px ; margin-bottom: 3px; font-weight: 600; color: #8ed400;">E-mail: <span><a style="font-size: 12px ; font-weight: 400; color: #333;" href="mailto:mahmudulislam0999@gmail.com">mahmudulislam0999@gmail.com</a></span></li>
+                <div style="margin-bottom: 3px;">
+                   <span style="font-size: 14px ; margin-bottom: 5px; font-weight: 600; color: #0043d4;">Mobile:</span><a style="font-size: 14px ; font-weight: 400; text-decoration: none;  color: #333;" href="tel:+01996153133"> +8801996153133</a> <br> 
+                </div>
+                <div style="margin-bottom: 3px;">
+                   <span style="font-size: 14px ; margin-bottom: 5px; font-weight: 600; color: #0043d4;">Office:</span><a style="font-size: 14px ; font-weight: 400; text-decoration: none;  color: #333;" href="tel:+01996153133"> +8801996153133</a> <br> 
+                </div>
+                <div style="margin-bottom: 3px;">
+                   <span style="font-size: 14px ; margin-bottom: 5px; font-weight: 600; color: #0043d4;">Address:</span><a style="font-size: 14px ; text-decoration: none;  font-weight: 400; color: #333;" href="#"> Bangladesh , Dhaka</a> <br> 
+                </div>
+                <div style="margin-bottom: 3px; border-bottom: 2px solid #777; padding-bottom: 10px;">
+                    <span style="font-size: 14px ; margin-bottom: 5px; font-weight: 600; color: #0043d4;">E-mail:</span><a style="font-size: 14px ; text-decoration: none;  font-weight: 400; color: #333;" href="mailto:mahmudulislam0999@gmail.com"> mahmudulislam0999@gmail.com</a> <br>
+                </div>
+                <div class="icon" style="margin-top: 12px;">
+                    <a href="https://www.facebook.com/"  target="_blank" style="width: 35px; height: 35px;  display: inline-block; margin-right: 15px;" >
+                        <img style="width: 100%; height: 100%; object-fit: cover;" src="https://i.postimg.cc/2yHZNVBK/facebook-icon-logo-png-5.png" alt="img">
+                    </a>
+
+                    <a href="https://github.com/mahmud-devs" target="_blank" style="width: 35px; height: 35px;  display: inline-block; margin-right: 15px;" >
+                        <img style="width: 100%; height: 100%; object-fit: cover;" src="https://iili.io/HL19u8Q.md.png" alt="img">
+                    </a>
+                    <a href="https://twitter.com/i/flow/login?redirect_after_login=%2F%3Flang%3Den" target="_blank"  style="width: 35px; height: 35px;  display: inline-block; margin-right: 15px;" >
+                        <img style="width: 100%; height: 100%; object-fit: cover;" src="https://iili.io/HL1Hce2.png" alt="img">
+                    </a>
+
+                </div>
             </div>
         </div>
     </div>
 </body>
 </html>
-
-
