--- a/index.html
+++ b/index.html
@@ -33,10 +33,11 @@
 <body>
     <div class="id" style=" width: 500px; height: 250px;  background: rgb(37,159,200);
         background: linear-gradient(24deg, rgba(37,159,200,0.24813252937893904) 0%, rgba(34,85,216,0.24533140893075978) 0%, rgba(197,224,224,0.4554154425442052) 100%, rgba(203,192,219,0.4694210447851015) 100%); border-radius: 25px; padding: 30px;">
-        <div class="id__img" style="width: 100%; height: 28%;  display:block; border-bottom: 3px solid #937cffba;  padding-top: 5px;">
+        <div class="id__img" style="width: 100%; position: relative; height: 28%;  display:block; border-bottom: 3px solid #937cffba;  padding-top: 5px;">
             <a style="font-weight: 300;  display: block;line-height: 0.8;font-size: 13px; color: #555; margin-bottom: 8px;">kind regards</a>
             <a style="font-size: 24px; display: block; line-height: 0.8; font-weight: 600; color: #333; margin-bottom: 6px;">Mahmudul Islam</a>
             <a style="text-transform: uppercase;  display: block; line-height: 0.8; font-weight: 800; font-size: 14px; letter-spacing: 2px; word-spacing: 2px; color: rgba(0, 67, 212, 0.703);">web designer</a>
+            <img style="position: absolute; right: 15px; bottom: 25px; width: 110px; height: 30px;" src="https://i.postimg.cc/TPj114pn/attachment-91100683-removebg-preview.png" alt="logo">
         </div>
         <div class="id__info" style="width: 100%; height: 70%; display:block; display: flex; padding-top: 15px;">
             <div style="width: 120px; height: 120px; border-radius: 50%; overflow: hidden; margin: 0 ; margin-right: 20px;">
@@ -73,3 +74,4 @@
     </div>
 </body>
 </html>
+
